grammar/JavaGrammar.g4
grammar JavaGrammar;
methode       : TYP NAME KLAMMERAUF KLAMMERZU block EOF;
block         : BLOCKAUF anwfolg BLOCKZU | BLOCKAUF BLOCKZU;
anwfolg       : anweisung+;
anweisung     : block | zuweisung | bedanw | solangeanw;
zuweisung     : NAME ZUWEISUNGSOP ausdruck SEMIKOLON;
bedanw        : WENN KLAMMERAUF vergleich KLAMMERZU anweisung | WENN KLAMMERAUF vergleich KLAMMERZU anweisung SONST anweisung;
solangeanw    : SOLANGE KLAMMERAUF vergleich KLAMMERZU anweisung;
vergleich     : ausdruck VERGLEICHSOP ausdruck;
ausdruck      : term | term STRICHOPERATOR ausdruck;
term          : faktor | faktor PUNKTOPERATOR term;
faktor        : NAME | ZAHL | KLAMMERAUF ausdruck KLAMMERZU;
KLAMMERAUF    : '(';
KLAMMERZU     : ')';
BLOCKAUF      : '{';
BLOCKZU       : '}';
WENN          : 'if';
SONST         : 'else';
SOLANGE       : 'while';
ZUWEISUNGSOP  : '=';
SEMIKOLON     : ';';
VERGLEICHSOP  : '==' | '!=' | '<' | '>' | '<=' | '>=';
STRICHOPERATOR: '+' | '-';
PUNKTOPERATOR : '*' | '/';
TYP           : 'void' | 'String' | 'int';
NAME          : ('a'..'z')+;
ZAHL          : ('0'..'9')+;
WHITESPACE    : (' ' | '\t' | '\r' | '\n')+ -> skip;
// ERR_CHAR      : . ;
